Prefer atlasdb-commons IterableUtils.partition over Iterables.partition